<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.urmet.ucontroller.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ToggleButton
                android:id="@+id/Lamp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Lamp1"
                android:textOff="@string/lamp1_off"
                android:textOn="@string/lamp1_on" />

            <ToggleButton
                android:id="@+id/Lamp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="@string/lamp2_off"
                android:textOn="@string/lamp2_on"
                android:text="Lamp2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/Shutter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/shutter_stop"
                android:textOn="@string/shutter_up"
                android:text="Shutter 1" />

            <ToggleButton
                android:id="@+id/Shutter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/shutter_stop"
                android:textOn="@string/shutter_down"
                android:text="Shutter 2" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
